--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version="2017.12.22" %}
+{% set version="2018.02.20" %}
 
 package:
   name: conda-forge-pinning
@@ -10,8 +10,9 @@ source:
 build:
   number: 0
   noarch: generic
-  # assumes that this package is built on mac/linux, since we can't have selectors with noarch
-  script: cp conda_build_config.yaml $PREFIX
+  script:
+    - cp conda_build_config.yaml $PREFIX      # [unix]
+    - copy conda_build_config.yaml %PREFIX%   # [win]
 
 test:
   commands:
