--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -19,12 +19,12 @@ cxx_compiler:                  # [win]
   - vs2015                     # [win]
 CONDA_BUILD_SYSROOT:           # [osx]
   - /opt/MacOSX10.9.sdk        # [osx]
-macos_min_version:
-  - 10.9
-macos_machine:
-  - x86_64-apple-darwin13.4.0
-MACOSX_DEPLOYMENT_TARGET:
-  - 10.9
+macos_min_version:             # [osx]
+  - 10.9                       # [osx]
+macos_machine:                 # [osx]
+  - x86_64-apple-darwin13.4.0  # [osx]
+MACOSX_DEPLOYMENT_TARGET:      # [osx]
+  - 10.9                       # [osx]
 target_platform:
   - win-64                     # [win]
   - win-32                     # [win]
