Provide exact path to MacOSX SDK
Include the full path to the MacOSX SDK on Travis CI in XCode.

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -18,7 +18,7 @@ cxx_compiler:                  # [win]
   - vs2015                     # [win]
   - vs2015                     # [win]
 CONDA_BUILD_SYSROOT:           # [osx]
-  - /opt/MacOSX10.9.sdk        # [osx]
+  - /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.9.sdk  # [osx]
 macos_min_version:             # [osx]
   - 10.9                       # [osx]
 macos_machine:                 # [osx]
