--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -8,14 +8,18 @@ blas_impl:
 #    code on win-64 miniconda.
 cross_compiler_target_platform:  # [win]
   - win-64                     # [win]
-c_compiler:                    # [win]
+c_compiler:
+  - toolchain_c                # [unix]
   - vs2008                     # [win]
   - vs2015                     # [win]
   - vs2015                     # [win]
-cxx_compiler:                  # [win]
+cxx_compiler:
+  - toolchain_cxx              # [unix]
   - vs2008                     # [win]
   - vs2015                     # [win]
   - vs2015                     # [win]
+fortran_compiler:              # [unix]
+  - toolchain_fort             # [unix]
 macos_min_version:             # [osx]
   - 10.9                       # [osx]
 macos_machine:                 # [osx]
