--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -47,23 +47,23 @@ pin_run_as_build:
   arpack:
     max_pin: x.x
   bzip2:
-    max_pin: x.x
+    max_pin: x
   cairo:
     max_pin: x.x
   curl:
-    max_pin: x.x
+    max_pin: x
   dbus:
     max_pin: x
   expat:
     max_pin: x.x
   ffmpeg:
-    max_pin: x.x.x
+    max_pin: x.x
   flann:
     max_pin: x.x.x
   fontconfig:
-    max_pin: x.x
+    max_pin: x
   freetype:
-    max_pin: x.x.x
+    max_pin: x.x
   gsl:
     max_pin: x.x
   gstreamer:
@@ -119,7 +119,7 @@ pin_run_as_build:
   libpcap:
     max_pin: x.x
   libpng:
-    max_pin: x.x.x
+    max_pin: x.x
   libprotobuf:
     max_pin: x.x
   librdkafka:
@@ -129,13 +129,13 @@ pin_run_as_build:
   libsvm:
     max_pin: x.x
   libtiff:
-    max_pin: x.x.x
+    max_pin: x
   libwebp:
     max_pin: x.x
   libxml2:
     max_pin: x.x
   lz4_c:
-    max_pin: x.x.x
+    max_pin: x.x
   lzo:
     max_pin: x
   metis:
@@ -210,23 +210,23 @@ boost:
 boost_cpp:
   - 1.66.0
 bzip2:
-  - 1.0
+  - 1
 cairo:
   - 1.14
 curl:
-  - 7.44
+  - 7
 dbus:
   - 1
 expat:
-  - 2.2                # [not ppc64le]
+  - 2.2
 ffmpeg:
-  - 3.2.3
+  - 3.2
 flann:
   - 1.9.1
 fontconfig:
-  - 2.12
+  - 2
 freetype:
-  - 2.8.1              # [not ppc64le]
+  - 2.8
 gsl:
   - 2.2
 gstreamer:
@@ -250,9 +250,9 @@ harfbuzz:
 hdf4:
   - 4.2
 hdf5:
-  - 1.10.1             # [not ppc64le]
+  - 1.10.1
 icu:
-  - 58                 # [not ppc64le]
+  - 58
 isl:
   - 0.19
 jpeg:
@@ -282,7 +282,7 @@ libnetcdf:
 libpcap:
   - 1.8
 libpng:
-  - 1.6.32
+  - 1.6
 libprotobuf:
   - 3.5
 librdkafka:
@@ -292,13 +292,13 @@ libssh2:
 libsvm:
   - 3.21
 libtiff:
-  - 4.0.8
+  - 4
 libwebp:
   - 0.5
 libxml2:
   - 2.9
 lz4_c:
-  - 1.8.1
+  - 1.8
 lzo:
   - 2
 metis:
