Pin glew to the minor version number
As GLEW changes its SONAME every minor version, we need to pin down to
the minor version. Seems patch releases don't generate much breakage
(when they do occur). So just pinning to the minor version number is
sufficient. Also start with the current version of GLEW in conda-forge.

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -80,6 +80,8 @@ pin_run_as_build:
     max_pin: x.x.x
   giflib:
     max_pin: x.x
+  glew:
+    max_pin: x.x
   glib:
     max_pin: x.x
   glpk:
@@ -247,6 +249,8 @@ geos:
   - 3.6.2
 giflib:
   - 5.1
+glew:
+  - 2.0.0
 glib:
   - 2.55
 glpk:
