--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -141,7 +141,7 @@ pin_run_as_build:
   libxml2:
     max_pin: x.x
   lz4-c:
-    max_pin: x.x
+    max_pin: x.x.x
   lzo:
     max_pin: x
   metis:
