--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -24,12 +24,12 @@ fortran_compiler:              # [unix or win64]
   - toolchain_fort             # [unix and not ppc64le]
   - gfortran                   # [ppc64le]
   - flang                      # [win64]
-m2w64_c_compiler:
-  - m2w64-toolchain
-m2w64_cxx_compiler:
-  - m2w64-toolchain
-m2w64_fortran_compiler:
-  - m2w64-toolchain
+m2w64_c_compiler:              # [win]
+  - m2w64-toolchain            # [win]
+m2w64_cxx_compiler:            # [win]
+  - m2w64-toolchain            # [win]
+m2w64_fortran_compiler:        # [win]
+  - m2w64-toolchain            # [win]
 macos_min_version:             # [osx]
   - 10.9                       # [osx]
 macos_machine:                 # [osx]
