--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -101,7 +101,7 @@ pin_run_as_build:
   graphviz:
     max_pin: x
   harfbuzz:
-    max_pin: x.x
+    max_pin: x
   hdf4:
     max_pin: x.x
   hdf5:
@@ -282,7 +282,7 @@ gmp:
 graphviz:
   - 2.38.0
 harfbuzz:
-  - 1.7
+  - 1
 hdf4:
   - 4.2
 hdf5:
