--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -9,17 +9,42 @@ blas_impl:
 cross_compiler_target_platform:  # [win]
   - win-64                     # [win]
 c_compiler:
-  - toolchain_c                # [unix and not ppc64le]
+  - toolchain_c                # [linux or osx]
+  # new compilers
+  - gcc                        # [linux]
+  - clang                      # [osx]
+
   - gcc                        # [ppc64le]
+
   - vs2008                     # [win]
   - vs2015                     # [win]
   - vs2015                     # [win]
 cxx_compiler:
-  - toolchain_cxx              # [unix and not ppc64le]
+  - toolchain_cxx              # [linux or osx]
+  # new compilers
+  - gxx                        # [linux]
+  - clanggxx                   # [osx]
+
   - gxx                        # [ppc64le]
+
   - vs2008                     # [win]
   - vs2015                     # [win]
   - vs2015                     # [win]
+
+channel_sources:
+  -
+    - 'conda-forge'
+    - 'defaults'
+  -
+    - 'conda-forge/label/new'
+    - 'conda-forge'
+    - 'defaults'
+channel_targets:
+  -
+    - 'conda-forge'
+  -
+    - 'conda-forge/label/new'
+
 fortran_compiler:              # [unix or win64]
   - toolchain_fort             # [unix and not ppc64le]
   - gfortran                   # [ppc64le]
@@ -56,6 +81,11 @@ zip_keys:
     - vc                        # [win]
     - c_compiler                # [win]
     - cxx_compiler              # [win]
+  -
+    - c_compiler       # [linux or osx]
+    - cxx_compiler     # [linux or osx]
+    - channel_sources  # [linux or osx]
+    - channel_targets  # [linux or osx]
 
 # TODO: remove these when run_exports are added to the packages.
 pin_run_as_build:
