--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -36,6 +36,9 @@ macos_machine:                 # [osx]
   - x86_64-apple-darwin13.4.0  # [osx]
 MACOSX_DEPLOYMENT_TARGET:      # [osx]
   - 10.9                       # [osx]
+mpi:                           # [unix]
+  - mpich                      # [unix]
+  - openmpi                    # [unix]
 target_platform:
   - win-64                     # [win]
 VERBOSE_AT:
