Add go_compiler to conda-forge pinning
Now that conda-forge/go-feedstock#21 has been merged it is time to add
the go_compiler entry to conda_build_config.

cc: @scopatz, @nehaljwani

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -30,6 +30,8 @@ m2w64_cxx_compiler:            # [win]
   - m2w64-toolchain            # [win]
 m2w64_fortran_compiler:        # [win]
   - m2w64-toolchain            # [win]
+go_compiler:
+  - go
 macos_min_version:             # [osx]
   - 10.9                       # [osx]
 macos_machine:                 # [osx]
