--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -180,6 +180,8 @@ pin_run_as_build:
     max_pin: x.x
   openblas:
     max_pin: x.x.x
+  openturns:
+    max_pin: x.x
   openjpeg:
     max_pin: x.x
   openssl:
