--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -33,7 +33,7 @@ cxx_compiler:
 
 fortran_compiler:              # [unix or win64]
   - toolchain_fort             # [unix and not ppc64le]
-  - gfortran                   # [linux or osx
+  - gfortran                   # [linux or osx]
 
   - gfortran                   # [ppc64le]
   - flang                      # [win64]
@@ -75,9 +75,9 @@ docker_image:                                   # [linux or ppc64le]
   - conda/c3i-linux-64                          # [linux]
   - condaforge/ppc-anvil                        # [ppc64le]
 
-build_number_increment:                         # [linux or osx]
-  - 0                                           # [linux or osx]
+build_number_decrement:
   - 1000                                        # [linux or osx]
+  - 0
 
 zip_keys:
   -
@@ -95,7 +95,7 @@ zip_keys:
     - channel_sources           # [linux or osx]
     - channel_targets           # [linux or osx]
     - docker_image              # [linux]
-    - build_number_increment    # [linux or osx]
+    - build_number_decrement    # [linux or osx]
 
 # TODO: remove these when run_exports are added to the packages.
 pin_run_as_build:
