--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -11,8 +11,8 @@ cross_compiler_target_platform:  # [win]
 c_compiler:
   - toolchain_c                # [linux or osx]
   # new compilers
-  - gcc                        # [linux]
-  - clang                      # [osx]
+  - gcc                        # [linux                               and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+  - clang                      # [osx                                 and (environ.get('CF_COMPILER_STACK') == 'comp7')]
 
   - gcc                        # [ppc64le]
 
@@ -22,8 +22,8 @@ c_compiler:
 cxx_compiler:
   - toolchain_cxx              # [linux or osx]
   # new compilers
-  - gxx                        # [linux]
-  - clanggxx                   # [osx]
+  - gxx                        # [linux                               and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+  - clanggxx                   # [osx                                 and (environ.get('CF_COMPILER_STACK') == 'comp7')]
 
   - gxx                        # [ppc64le]
 
@@ -33,7 +33,7 @@ cxx_compiler:
 
 fortran_compiler:              # [unix or win64]
   - toolchain_fort             # [unix and not ppc64le]
-  - gfortran                   # [linux or osx]
+  - gfortran                   # [(linux or osx)                      and (environ.get('CF_COMPILER_STACK') == 'comp7')]
 
   - gfortran                   # [ppc64le]
   - flang                      # [win64]
@@ -64,20 +64,21 @@ VERBOSE_CM:
 # dual build configuration
 channel_sources:
   - conda-forge,defaults
-  - conda-forge/label/gcc7,defaults  # [linux or osx]
+  - conda-forge/label/gcc7,defaults             # [(linux or osx)     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
 
 channel_targets:
   - conda-forge main
-  - conda-forge gcc7                            # [linux or osx]
+  - conda-forge gcc7                            # [(linux or osx)     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
 
 docker_image:                                   # [linux or ppc64le]
   - condaforge/linux-anvil                      # [linux]
-  - conda/c3i-linux-64                          # [linux]
+  - conda/c3i-linux-64                          # [linux              and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+
   - condaforge/ppc-anvil                        # [ppc64le]
 
-build_number_decrement:
-  - 1000                                        # [linux or osx]
-  - 0
+build_number_decrement:                         # [(linux or osx)     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+  - 1000                                        # [(linux or osx)     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+  - 0                                           # [(linux or osx)     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
 
 zip_keys:
   -
@@ -88,14 +89,16 @@ zip_keys:
     - vc                        # [win]
     - c_compiler                # [win]
     - cxx_compiler              # [win]
-  -
-    - c_compiler                # [linux or osx]
-    - cxx_compiler              # [linux or osx]
-    - fortran_compiler          # [linux or osx
-    - channel_sources           # [linux or osx]
-    - channel_targets           # [linux or osx]
-    - docker_image              # [linux]
-    - build_number_decrement    # [linux or osx]
+
+  # Dual compiler zip
+  -                             # [                                       (environ.get('CF_COMPILER_STACK') == 'comp7')]
+    - c_compiler                # [(linux or osx)                     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+    - cxx_compiler              # [(linux or osx)                     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+    - fortran_compiler          # [(linux or osx)                     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+    - channel_sources           # [(linux or osx)                     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+    - channel_targets           # [(linux or osx)                     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+    - docker_image              # [linux                              and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+    - build_number_decrement    # [(linux or osx)                     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
 
 # TODO: remove these when run_exports are added to the packages.
 pin_run_as_build:
