Use new conda-forge docker image for compilers
Switches to the `condaforge/linux-anvil-comp7` image for building
packages. This is basically the same as `condaforge/linux-anvil` except
that it does not install the `devtoolset-2` compilers. Meaning it builds
under a non-`root` (regular) user. Also it has access to `yum` for
installing things so can satisfy `yum_requirements.txt`. As both of
these weren't possible on the Anaconda image, several feedstocks were
blocked from migration. This should help unblock them.

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -71,7 +71,7 @@ channel_targets:
 
 docker_image:                                   # [linux or ppc64le]
   - condaforge/linux-anvil                      # [linux]
-  - conda/c3i-linux-64                          # [linux              and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+  - condaforge/linux-anvil-comp7                # [linux              and (environ.get('CF_COMPILER_STACK') == 'comp7')]
 
   - condaforge/ppc-anvil                        # [ppc64le]
 
