--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -156,6 +156,8 @@ pin_run_as_build:
     max_pin: x
   jpeg:
     max_pin: x
+  libjpeg_turbo:
+    max_pin: x
   json-c:
     max_pin: x.x
   jsoncpp:
@@ -343,6 +345,8 @@ jasper:
   - 1.900.1
 jpeg:
   - 9
+libjpeg_turbo:
+  - 2
 json_c:
   - 0.12  # [not win]
   - 0.13  # [win]
