--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -43,7 +43,9 @@ m2w64_cxx_compiler:            # [win]
 m2w64_fortran_compiler:        # [win]
   - m2w64-toolchain            # [win]
 go_compiler:
-  - go
+  - go-nocgo
+cgo_compiler:
+  - go-cgo
 macos_min_version:             # [osx]
   - 10.9                       # [osx]
 macos_machine:                 # [osx]
