--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -32,8 +32,8 @@ cxx_compiler:
   - vs2015                     # [win and (environ.get('CF_MAX_PY_VER', '') >= '37')]
 fortran_compiler:              # [unix or win64]
   - toolchain_fort             # [unix and not ppc64le]
-  - gfortran 4.*               # [(linux or osx)                      and (environ.get('CF_COMPILER_STACK') == 'comp7')]
-
+  - gfortran                   # [linux                               and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+  - gfortran 4.*               # [osx                                 and (environ.get('CF_COMPILER_STACK') == 'comp7')]
   - gfortran                   # [ppc64le]
   - flang                      # [win64]
 m2w64_c_compiler:              # [win]
