Set fortran_compiler_version

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -32,10 +32,11 @@ cxx_compiler:
   - vs2015                     # [win and (environ.get('CF_MAX_PY_VER', '') >= '37')]
 fortran_compiler:              # [unix or win64]
   - toolchain_fort             # [unix and not ppc64le]
-  - gfortran                   # [linux                               and (environ.get('CF_COMPILER_STACK') == 'comp7')]
-  - gfortran 4.*               # [osx                                 and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+  - gfortran                   # [(linux or osx)                      and (environ.get('CF_COMPILER_STACK') == 'comp7')]
   - gfortran                   # [ppc64le]
   - flang                      # [win64]
+fortran_compiler_version       # [osx]
+  - 4                          # [osx]
 m2w64_c_compiler:              # [win]
   - m2w64-toolchain            # [win]
 m2w64_cxx_compiler:            # [win]
