--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -360,7 +360,8 @@ hdf4:
 hdf5:
   - 1.10.4
 icu:
-  - 58
+  - 58   # [not aarch64]
+  - 60   # [aarch64]
 isl:
   - 0.19
 jasper:
@@ -398,7 +399,8 @@ libnetcdf:
 libpcap:
   - 1.8
 libpng:
-  - 1.6.35
+  - 1.6.35   # [not aarch64]
+  - 1.6.36   # [aarch64]
 libprotobuf:
   - 3.6
 librdkafka:
@@ -410,7 +412,8 @@ libssh2:
 libsvm:
   - 3.21
 libtiff:
-  - 4.0.9
+  - 4.0.9    # [not aarch64]
+  - 4.0.10   # [aarch64]
 libunwind:
   - 1.2
 libwebp:
@@ -420,7 +423,8 @@ libxml2:
 libuuid:
   - 2.32.1
 lz4_c:
-  - 1.8.1
+  - 1.8.1    # [not aarch64]
+  - 1.8.3    # [aarch64]
 lzo:
   - 2
 metis:
@@ -448,12 +452,14 @@ ntl:
 # we build for an old version of numpy for forward compatibility
 #    1.11 seems to be the oldest on win that works with scipy 0.19.  Compiler errors otherwise.
 numpy:
-  - 1.9   # [unix]
+  - 1.9    # [unix]
+  - 1.11   # [aarch64]
   - 1.11   # [win]
 occt:
   - 7.3
 openblas:
-  - 0.3.3
+  - 0.3.3      # [not aarch64]
+  - 0.3.5      # [aarch64]
 openjpeg:
   - 2.3
 openssl:
@@ -509,4 +515,5 @@ zeromq:
 zlib:
   - 1.2
 zstd:
-  - 1.3.3
+  - 1.3.3  # [not aarch64]
+  - 1.3.7  # [aarch64]
