--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -41,7 +41,7 @@ fortran_compiler:              # [unix or win64]
   - gfortran                   # [aarch64 or ppc64le]
 
   - flang                      # [win64]
-fortran_compiler_version       # [osx]
+fortran_compiler_version:      # [osx]
   - 4                          # [osx]
 m2w64_c_compiler:              # [win]
   - m2w64-toolchain            # [win]
