--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -42,6 +42,7 @@ fortran_compiler:              # [unix or win64]
 
   - flang                      # [win64]
 fortran_compiler_version:      # [osx]
+  - 2                          # [osx and (environ.get('CF_COMPILER_STACK') == 'comp4')]
   - 4                          # [osx]
 m2w64_c_compiler:              # [win]
   - m2w64-toolchain            # [win]
