--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -277,6 +277,8 @@ pin_run_as_build:
     max_pin: x.x.x
   sqlite:
     max_pin: x
+  sundials:
+    max_pin: x.x
   tk:
     max_pin: x.x
   vc:
@@ -488,6 +490,8 @@ sox:
   - 14.4.2
 sqlite:
   - 3
+sundials:
+  - 3.2 
 tk:
   - 8.6                # [not ppc64le]
 vc:                    # [win]
