--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -521,7 +521,8 @@ xerces_c:
 xz:
   - 5.2
 zeromq:
-  - 4.2.5
+  - 4.2.5  # [not (aarch64 or ppc64le)]
+  - 4.3.1  # [aarch64 or ppc64le]
 zlib:
   - 1.2
 zstd:
