--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -460,7 +460,7 @@ ntl:
 # we build for an old version of numpy for forward compatibility
 #    1.11 seems to be the oldest on win that works with scipy 0.19.  Compiler errors otherwise.
 numpy:
-  - 1.9    # [unix]
+  - 1.9    # [unix and not aarch64]
   - 1.11   # [aarch64]
   - 1.11   # [win]
 occt:
